packages/sgfutil/sgfutil-0.1.1-py3-none-any.whl/sgfutil/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> collection
Rule 1     collection -> tree
Rule 2     collection -> tree collection
Rule 3     tree -> LPAREN seq RPAREN
Rule 4     tree -> LPAREN seq tree RPAREN
Rule 5     tree -> LPAREN seq RPAREN tree
Rule 6     seq -> node
Rule 7     seq -> node seq
Rule 8     node -> SEMICOLON property
Rule 9     node -> node property
Rule 10    property -> MOVE val
Rule 11    property -> SETUP val
Rule 12    property -> NODEANNO val
Rule 13    property -> MOVEANNO val
Rule 14    property -> MARKUP val
Rule 15    property -> ROOT val
Rule 16    property -> GAMEINFO val
Rule 17    property -> TIMING val
Rule 18    property -> PROP val
Rule 19    property -> property val
Rule 20    val -> LBRACKET INT RBRACKET
Rule 21    val -> LBRACKET REAL RBRACKET
Rule 22    val -> LBRACKET POINT RBRACKET
Rule 23    val -> LBRACKET TEXT RBRACKET

Terminals, with rules where they appear

GAMEINFO             : 16
INT                  : 20
LBRACKET             : 20 21 22 23
LPAREN               : 3 4 5
MARKUP               : 14
MOVE                 : 10
MOVEANNO             : 13
NODEANNO             : 12
POINT                : 22
PROP                 : 18
RBRACKET             : 20 21 22 23
REAL                 : 21
ROOT                 : 15
RPAREN               : 3 4 5
SEMICOLON            : 8
SETUP                : 11
TEXT                 : 23
TIMING               : 17
error                : 

Nonterminals, with rules where they appear

collection           : 2 0
node                 : 6 7 9
property             : 8 9 19
seq                  : 3 4 5 7
tree                 : 1 2 4 5
val                  : 10 11 12 13 14 15 16 17 18 19

Parsing method: LALR

state 0

    (0) S' -> . collection
    (1) collection -> . tree
    (2) collection -> . tree collection
    (3) tree -> . LPAREN seq RPAREN
    (4) tree -> . LPAREN seq tree RPAREN
    (5) tree -> . LPAREN seq RPAREN tree

    LPAREN          shift and go to state 3

    collection                     shift and go to state 1
    tree                           shift and go to state 2

state 1

    (0) S' -> collection .



state 2

    (1) collection -> tree .
    (2) collection -> tree . collection
    (1) collection -> . tree
    (2) collection -> . tree collection
    (3) tree -> . LPAREN seq RPAREN
    (4) tree -> . LPAREN seq tree RPAREN
    (5) tree -> . LPAREN seq RPAREN tree

    $end            reduce using rule 1 (collection -> tree .)
    LPAREN          shift and go to state 3

    tree                           shift and go to state 2
    collection                     shift and go to state 4

state 3

    (3) tree -> LPAREN . seq RPAREN
    (4) tree -> LPAREN . seq tree RPAREN
    (5) tree -> LPAREN . seq RPAREN tree
    (6) seq -> . node
    (7) seq -> . node seq
    (8) node -> . SEMICOLON property
    (9) node -> . node property

    SEMICOLON       shift and go to state 7

    seq                            shift and go to state 5
    node                           shift and go to state 6

state 4

    (2) collection -> tree collection .

    $end            reduce using rule 2 (collection -> tree collection .)


state 5

    (3) tree -> LPAREN seq . RPAREN
    (4) tree -> LPAREN seq . tree RPAREN
    (5) tree -> LPAREN seq . RPAREN tree
    (3) tree -> . LPAREN seq RPAREN
    (4) tree -> . LPAREN seq tree RPAREN
    (5) tree -> . LPAREN seq RPAREN tree

    RPAREN          shift and go to state 8
    LPAREN          shift and go to state 3

    tree                           shift and go to state 9

state 6

    (6) seq -> node .
    (7) seq -> node . seq
    (9) node -> node . property
    (6) seq -> . node
    (7) seq -> . node seq
    (10) property -> . MOVE val
    (11) property -> . SETUP val
    (12) property -> . NODEANNO val
    (13) property -> . MOVEANNO val
    (14) property -> . MARKUP val
    (15) property -> . ROOT val
    (16) property -> . GAMEINFO val
    (17) property -> . TIMING val
    (18) property -> . PROP val
    (19) property -> . property val
    (8) node -> . SEMICOLON property
    (9) node -> . node property

    RPAREN          reduce using rule 6 (seq -> node .)
    LPAREN          reduce using rule 6 (seq -> node .)
    MOVE            shift and go to state 12
    SETUP           shift and go to state 13
    NODEANNO        shift and go to state 14
    MOVEANNO        shift and go to state 15
    MARKUP          shift and go to state 16
    ROOT            shift and go to state 17
    GAMEINFO        shift and go to state 18
    TIMING          shift and go to state 19
    PROP            shift and go to state 20
    SEMICOLON       shift and go to state 7

    node                           shift and go to state 6
    seq                            shift and go to state 10
    property                       shift and go to state 11

state 7

    (8) node -> SEMICOLON . property
    (10) property -> . MOVE val
    (11) property -> . SETUP val
    (12) property -> . NODEANNO val
    (13) property -> . MOVEANNO val
    (14) property -> . MARKUP val
    (15) property -> . ROOT val
    (16) property -> . GAMEINFO val
    (17) property -> . TIMING val
    (18) property -> . PROP val
    (19) property -> . property val

    MOVE            shift and go to state 12
    SETUP           shift and go to state 13
    NODEANNO        shift and go to state 14
    MOVEANNO        shift and go to state 15
    MARKUP          shift and go to state 16
    ROOT            shift and go to state 17
    GAMEINFO        shift and go to state 18
    TIMING          shift and go to state 19
    PROP            shift and go to state 20

    property                       shift and go to state 21

state 8

    (3) tree -> LPAREN seq RPAREN .
    (5) tree -> LPAREN seq RPAREN . tree
    (3) tree -> . LPAREN seq RPAREN
    (4) tree -> . LPAREN seq tree RPAREN
    (5) tree -> . LPAREN seq RPAREN tree

  ! shift/reduce conflict for LPAREN resolved as shift
    $end            reduce using rule 3 (tree -> LPAREN seq RPAREN .)
    RPAREN          reduce using rule 3 (tree -> LPAREN seq RPAREN .)
    LPAREN          shift and go to state 3

  ! LPAREN          [ reduce using rule 3 (tree -> LPAREN seq RPAREN .) ]

    tree                           shift and go to state 22

state 9

    (4) tree -> LPAREN seq tree . RPAREN

    RPAREN          shift and go to state 23


state 10

    (7) seq -> node seq .

    RPAREN          reduce using rule 7 (seq -> node seq .)
    LPAREN          reduce using rule 7 (seq -> node seq .)


state 11

    (9) node -> node property .
    (19) property -> property . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    MOVE            reduce using rule 9 (node -> node property .)
    SETUP           reduce using rule 9 (node -> node property .)
    NODEANNO        reduce using rule 9 (node -> node property .)
    MOVEANNO        reduce using rule 9 (node -> node property .)
    MARKUP          reduce using rule 9 (node -> node property .)
    ROOT            reduce using rule 9 (node -> node property .)
    GAMEINFO        reduce using rule 9 (node -> node property .)
    TIMING          reduce using rule 9 (node -> node property .)
    PROP            reduce using rule 9 (node -> node property .)
    SEMICOLON       reduce using rule 9 (node -> node property .)
    RPAREN          reduce using rule 9 (node -> node property .)
    LPAREN          reduce using rule 9 (node -> node property .)
    LBRACKET        shift and go to state 25

    val                            shift and go to state 24

state 12

    (10) property -> MOVE . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 26

state 13

    (11) property -> SETUP . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 27

state 14

    (12) property -> NODEANNO . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 28

state 15

    (13) property -> MOVEANNO . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 29

state 16

    (14) property -> MARKUP . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 30

state 17

    (15) property -> ROOT . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 31

state 18

    (16) property -> GAMEINFO . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 32

state 19

    (17) property -> TIMING . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 33

state 20

    (18) property -> PROP . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    LBRACKET        shift and go to state 25

    val                            shift and go to state 34

state 21

    (8) node -> SEMICOLON property .
    (19) property -> property . val
    (20) val -> . LBRACKET INT RBRACKET
    (21) val -> . LBRACKET REAL RBRACKET
    (22) val -> . LBRACKET POINT RBRACKET
    (23) val -> . LBRACKET TEXT RBRACKET

    MOVE            reduce using rule 8 (node -> SEMICOLON property .)
    SETUP           reduce using rule 8 (node -> SEMICOLON property .)
    NODEANNO        reduce using rule 8 (node -> SEMICOLON property .)
    MOVEANNO        reduce using rule 8 (node -> SEMICOLON property .)
    MARKUP          reduce using rule 8 (node -> SEMICOLON property .)
    ROOT            reduce using rule 8 (node -> SEMICOLON property .)
    GAMEINFO        reduce using rule 8 (node -> SEMICOLON property .)
    TIMING          reduce using rule 8 (node -> SEMICOLON property .)
    PROP            reduce using rule 8 (node -> SEMICOLON property .)
    SEMICOLON       reduce using rule 8 (node -> SEMICOLON property .)
    RPAREN          reduce using rule 8 (node -> SEMICOLON property .)
    LPAREN          reduce using rule 8 (node -> SEMICOLON property .)
    LBRACKET        shift and go to state 25

    val                            shift and go to state 24

state 22

    (5) tree -> LPAREN seq RPAREN tree .

    LPAREN          reduce using rule 5 (tree -> LPAREN seq RPAREN tree .)
    $end            reduce using rule 5 (tree -> LPAREN seq RPAREN tree .)
    RPAREN          reduce using rule 5 (tree -> LPAREN seq RPAREN tree .)


state 23

    (4) tree -> LPAREN seq tree RPAREN .

    LPAREN          reduce using rule 4 (tree -> LPAREN seq tree RPAREN .)
    $end            reduce using rule 4 (tree -> LPAREN seq tree RPAREN .)
    RPAREN          reduce using rule 4 (tree -> LPAREN seq tree RPAREN .)


state 24

    (19) property -> property val .

    LBRACKET        reduce using rule 19 (property -> property val .)
    MOVE            reduce using rule 19 (property -> property val .)
    SETUP           reduce using rule 19 (property -> property val .)
    NODEANNO        reduce using rule 19 (property -> property val .)
    MOVEANNO        reduce using rule 19 (property -> property val .)
    MARKUP          reduce using rule 19 (property -> property val .)
    ROOT            reduce using rule 19 (property -> property val .)
    GAMEINFO        reduce using rule 19 (property -> property val .)
    TIMING          reduce using rule 19 (property -> property val .)
    PROP            reduce using rule 19 (property -> property val .)
    SEMICOLON       reduce using rule 19 (property -> property val .)
    RPAREN          reduce using rule 19 (property -> property val .)
    LPAREN          reduce using rule 19 (property -> property val .)


state 25

    (20) val -> LBRACKET . INT RBRACKET
    (21) val -> LBRACKET . REAL RBRACKET
    (22) val -> LBRACKET . POINT RBRACKET
    (23) val -> LBRACKET . TEXT RBRACKET

    INT             shift and go to state 35
    REAL            shift and go to state 36
    POINT           shift and go to state 37
    TEXT            shift and go to state 38


state 26

    (10) property -> MOVE val .

    LBRACKET        reduce using rule 10 (property -> MOVE val .)
    MOVE            reduce using rule 10 (property -> MOVE val .)
    SETUP           reduce using rule 10 (property -> MOVE val .)
    NODEANNO        reduce using rule 10 (property -> MOVE val .)
    MOVEANNO        reduce using rule 10 (property -> MOVE val .)
    MARKUP          reduce using rule 10 (property -> MOVE val .)
    ROOT            reduce using rule 10 (property -> MOVE val .)
    GAMEINFO        reduce using rule 10 (property -> MOVE val .)
    TIMING          reduce using rule 10 (property -> MOVE val .)
    PROP            reduce using rule 10 (property -> MOVE val .)
    SEMICOLON       reduce using rule 10 (property -> MOVE val .)
    RPAREN          reduce using rule 10 (property -> MOVE val .)
    LPAREN          reduce using rule 10 (property -> MOVE val .)


state 27

    (11) property -> SETUP val .

    LBRACKET        reduce using rule 11 (property -> SETUP val .)
    MOVE            reduce using rule 11 (property -> SETUP val .)
    SETUP           reduce using rule 11 (property -> SETUP val .)
    NODEANNO        reduce using rule 11 (property -> SETUP val .)
    MOVEANNO        reduce using rule 11 (property -> SETUP val .)
    MARKUP          reduce using rule 11 (property -> SETUP val .)
    ROOT            reduce using rule 11 (property -> SETUP val .)
    GAMEINFO        reduce using rule 11 (property -> SETUP val .)
    TIMING          reduce using rule 11 (property -> SETUP val .)
    PROP            reduce using rule 11 (property -> SETUP val .)
    SEMICOLON       reduce using rule 11 (property -> SETUP val .)
    RPAREN          reduce using rule 11 (property -> SETUP val .)
    LPAREN          reduce using rule 11 (property -> SETUP val .)


state 28

    (12) property -> NODEANNO val .

    LBRACKET        reduce using rule 12 (property -> NODEANNO val .)
    MOVE            reduce using rule 12 (property -> NODEANNO val .)
    SETUP           reduce using rule 12 (property -> NODEANNO val .)
    NODEANNO        reduce using rule 12 (property -> NODEANNO val .)
    MOVEANNO        reduce using rule 12 (property -> NODEANNO val .)
    MARKUP          reduce using rule 12 (property -> NODEANNO val .)
    ROOT            reduce using rule 12 (property -> NODEANNO val .)
    GAMEINFO        reduce using rule 12 (property -> NODEANNO val .)
    TIMING          reduce using rule 12 (property -> NODEANNO val .)
    PROP            reduce using rule 12 (property -> NODEANNO val .)
    SEMICOLON       reduce using rule 12 (property -> NODEANNO val .)
    RPAREN          reduce using rule 12 (property -> NODEANNO val .)
    LPAREN          reduce using rule 12 (property -> NODEANNO val .)


state 29

    (13) property -> MOVEANNO val .

    LBRACKET        reduce using rule 13 (property -> MOVEANNO val .)
    MOVE            reduce using rule 13 (property -> MOVEANNO val .)
    SETUP           reduce using rule 13 (property -> MOVEANNO val .)
    NODEANNO        reduce using rule 13 (property -> MOVEANNO val .)
    MOVEANNO        reduce using rule 13 (property -> MOVEANNO val .)
    MARKUP          reduce using rule 13 (property -> MOVEANNO val .)
    ROOT            reduce using rule 13 (property -> MOVEANNO val .)
    GAMEINFO        reduce using rule 13 (property -> MOVEANNO val .)
    TIMING          reduce using rule 13 (property -> MOVEANNO val .)
    PROP            reduce using rule 13 (property -> MOVEANNO val .)
    SEMICOLON       reduce using rule 13 (property -> MOVEANNO val .)
    RPAREN          reduce using rule 13 (property -> MOVEANNO val .)
    LPAREN          reduce using rule 13 (property -> MOVEANNO val .)


state 30

    (14) property -> MARKUP val .

    LBRACKET        reduce using rule 14 (property -> MARKUP val .)
    MOVE            reduce using rule 14 (property -> MARKUP val .)
    SETUP           reduce using rule 14 (property -> MARKUP val .)
    NODEANNO        reduce using rule 14 (property -> MARKUP val .)
    MOVEANNO        reduce using rule 14 (property -> MARKUP val .)
    MARKUP          reduce using rule 14 (property -> MARKUP val .)
    ROOT            reduce using rule 14 (property -> MARKUP val .)
    GAMEINFO        reduce using rule 14 (property -> MARKUP val .)
    TIMING          reduce using rule 14 (property -> MARKUP val .)
    PROP            reduce using rule 14 (property -> MARKUP val .)
    SEMICOLON       reduce using rule 14 (property -> MARKUP val .)
    RPAREN          reduce using rule 14 (property -> MARKUP val .)
    LPAREN          reduce using rule 14 (property -> MARKUP val .)


state 31

    (15) property -> ROOT val .

    LBRACKET        reduce using rule 15 (property -> ROOT val .)
    MOVE            reduce using rule 15 (property -> ROOT val .)
    SETUP           reduce using rule 15 (property -> ROOT val .)
    NODEANNO        reduce using rule 15 (property -> ROOT val .)
    MOVEANNO        reduce using rule 15 (property -> ROOT val .)
    MARKUP          reduce using rule 15 (property -> ROOT val .)
    ROOT            reduce using rule 15 (property -> ROOT val .)
    GAMEINFO        reduce using rule 15 (property -> ROOT val .)
    TIMING          reduce using rule 15 (property -> ROOT val .)
    PROP            reduce using rule 15 (property -> ROOT val .)
    SEMICOLON       reduce using rule 15 (property -> ROOT val .)
    RPAREN          reduce using rule 15 (property -> ROOT val .)
    LPAREN          reduce using rule 15 (property -> ROOT val .)


state 32

    (16) property -> GAMEINFO val .

    LBRACKET        reduce using rule 16 (property -> GAMEINFO val .)
    MOVE            reduce using rule 16 (property -> GAMEINFO val .)
    SETUP           reduce using rule 16 (property -> GAMEINFO val .)
    NODEANNO        reduce using rule 16 (property -> GAMEINFO val .)
    MOVEANNO        reduce using rule 16 (property -> GAMEINFO val .)
    MARKUP          reduce using rule 16 (property -> GAMEINFO val .)
    ROOT            reduce using rule 16 (property -> GAMEINFO val .)
    GAMEINFO        reduce using rule 16 (property -> GAMEINFO val .)
    TIMING          reduce using rule 16 (property -> GAMEINFO val .)
    PROP            reduce using rule 16 (property -> GAMEINFO val .)
    SEMICOLON       reduce using rule 16 (property -> GAMEINFO val .)
    RPAREN          reduce using rule 16 (property -> GAMEINFO val .)
    LPAREN          reduce using rule 16 (property -> GAMEINFO val .)


state 33

    (17) property -> TIMING val .

    LBRACKET        reduce using rule 17 (property -> TIMING val .)
    MOVE            reduce using rule 17 (property -> TIMING val .)
    SETUP           reduce using rule 17 (property -> TIMING val .)
    NODEANNO        reduce using rule 17 (property -> TIMING val .)
    MOVEANNO        reduce using rule 17 (property -> TIMING val .)
    MARKUP          reduce using rule 17 (property -> TIMING val .)
    ROOT            reduce using rule 17 (property -> TIMING val .)
    GAMEINFO        reduce using rule 17 (property -> TIMING val .)
    TIMING          reduce using rule 17 (property -> TIMING val .)
    PROP            reduce using rule 17 (property -> TIMING val .)
    SEMICOLON       reduce using rule 17 (property -> TIMING val .)
    RPAREN          reduce using rule 17 (property -> TIMING val .)
    LPAREN          reduce using rule 17 (property -> TIMING val .)


state 34

    (18) property -> PROP val .

    LBRACKET        reduce using rule 18 (property -> PROP val .)
    MOVE            reduce using rule 18 (property -> PROP val .)
    SETUP           reduce using rule 18 (property -> PROP val .)
    NODEANNO        reduce using rule 18 (property -> PROP val .)
    MOVEANNO        reduce using rule 18 (property -> PROP val .)
    MARKUP          reduce using rule 18 (property -> PROP val .)
    ROOT            reduce using rule 18 (property -> PROP val .)
    GAMEINFO        reduce using rule 18 (property -> PROP val .)
    TIMING          reduce using rule 18 (property -> PROP val .)
    PROP            reduce using rule 18 (property -> PROP val .)
    SEMICOLON       reduce using rule 18 (property -> PROP val .)
    RPAREN          reduce using rule 18 (property -> PROP val .)
    LPAREN          reduce using rule 18 (property -> PROP val .)


state 35

    (20) val -> LBRACKET INT . RBRACKET

    RBRACKET        shift and go to state 39


state 36

    (21) val -> LBRACKET REAL . RBRACKET

    RBRACKET        shift and go to state 40


state 37

    (22) val -> LBRACKET POINT . RBRACKET

    RBRACKET        shift and go to state 41


state 38

    (23) val -> LBRACKET TEXT . RBRACKET

    RBRACKET        shift and go to state 42


state 39

    (20) val -> LBRACKET INT RBRACKET .

    LBRACKET        reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    MOVE            reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    SETUP           reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    NODEANNO        reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    MOVEANNO        reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    MARKUP          reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    ROOT            reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    GAMEINFO        reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    TIMING          reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    PROP            reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    SEMICOLON       reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    RPAREN          reduce using rule 20 (val -> LBRACKET INT RBRACKET .)
    LPAREN          reduce using rule 20 (val -> LBRACKET INT RBRACKET .)


state 40

    (21) val -> LBRACKET REAL RBRACKET .

    LBRACKET        reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    MOVE            reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    SETUP           reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    NODEANNO        reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    MOVEANNO        reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    MARKUP          reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    ROOT            reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    GAMEINFO        reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    TIMING          reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    PROP            reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    SEMICOLON       reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    RPAREN          reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)
    LPAREN          reduce using rule 21 (val -> LBRACKET REAL RBRACKET .)


state 41

    (22) val -> LBRACKET POINT RBRACKET .

    LBRACKET        reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    MOVE            reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    SETUP           reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    NODEANNO        reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    MOVEANNO        reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    MARKUP          reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    ROOT            reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    GAMEINFO        reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    TIMING          reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    PROP            reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    SEMICOLON       reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    RPAREN          reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)
    LPAREN          reduce using rule 22 (val -> LBRACKET POINT RBRACKET .)


state 42

    (23) val -> LBRACKET TEXT RBRACKET .

    LBRACKET        reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    MOVE            reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    SETUP           reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    NODEANNO        reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    MOVEANNO        reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    MARKUP          reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    ROOT            reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    GAMEINFO        reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    TIMING          reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    PROP            reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    SEMICOLON       reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    RPAREN          reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)
    LPAREN          reduce using rule 23 (val -> LBRACKET TEXT RBRACKET .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for LPAREN in state 8 resolved as shift
